# Sokoban

./: .gitignore  motor.py  sokobanV1.py  sokobanV2.py  sokobanV3.py
SokobanSolver/: CMakeLists.txt  Node.cpp  Node.h  NodeV2.cpp  NodeV2.h  Point.cpp  Point.h  Tree.cpp  Tree.h  main.cpp  movesFile2017.txt
SokobanSolver/hungarianMethod/: hungarian.hpp
